# sistema_control_acceso_firmware

./: CMakeLists.txt  README.md  partitions.csv  platformio.ini
components/mqtt_app/: CMakeLists.txt  mqtt_init.c  mqtt_manager.c  mqtt_publisher.c  mqtt_status_broadcast_task.c  mqtt_subscriber.c  mqtt_subscription_manager.c
components/mqtt_app/include/: mqtt_config.h  mqtt_init.h  mqtt_manager.h  mqtt_publisher.h  mqtt_status_broadcast_task.h  mqtt_subscription_manager.h
components/rtc_app/: CMakeLists.txt  rtc_get_time_from_module.c  rtc_i2c_config.c  rtc_init.c  rtc_management_task.c  rtc_set_time_from_ntp_server.c  rtc_sync_device_internal_clock.c  rtc_utils.c  rtc_write_time_in_module.c
components/rtc_app/include/: rtc_config.h  rtc_get_time_from_module.h  rtc_i2c_config.h  rtc_init.h  rtc_management_task.h  rtc_set_time_from_ntp_server.h  rtc_sync_device_internal_clock.h  rtc_utils.h  rtc_write_time_in_module.h
components/wifi_mesh_app/: CMakeLists.txt  wifi_mesh_event_handler.c  wifi_mesh_init.c  wifi_mesh_monitor_rssi_task.c  wifi_mesh_node_logic.c  wifi_mesh_setup.c  wifi_mesh_tasks.c  wifi_mesh_transmission.c
components/wifi_mesh_app/include/: wifi_mesh_config.h  wifi_mesh_event_handler.h  wifi_mesh_info.h  wifi_mesh_init.h  wifi_mesh_monitor_rssi_task.h  wifi_mesh_node_logic.h  wifi_mesh_setup.h  wifi_mesh_tasks.h  wifi_mesh_transmission.h
include/: config.h  convert_data_to_json.h  mqtt_config.h  mqtt_init.h  mqtt_manager.h  mqtt_publisher.h  mqtt_subscriber.h  nodeLogic.h  process_data_from_wiegand_reader_task.h  wiegand_config.h  wiegand_init.h  wiegand_reader.h  wiegand_types.h  wifi_mesh_init.h  wifi_mesh_tasks.h  wifi_mesh_transmission.h
src/: convert_data_to_json.c  main.c  mqtt_init.c  mqtt_publisher.c  mqtt_subscriber.c  mqtt_subscription_manager.c  nodeLogic.c  (+8 more)
(+42 files in other folders)
